Update index.html to fix pic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-12 text-center">
-            <img class="img-fluid" src="../../../Desktop/Portfolio/images/IMG_0622.jpg" alt="">
+            <img class="img-fluid" src="ahoran12/test/blob/main/IMG_0622.jpg" alt="">
             <h4>My Most Recent Trip</h4>
             <h6>Japan</h6>
           </div>
